ok button& Footer site

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     
 
     <section class="failure">
-        <div class="failure-image"><img src="images/failure.jpg" alt="Depressed guy" height="300px" width="450px" ></div>
+        <div class="failure-image"><img src="images/person.png" alt="" height="550px" width="430px" ></div>
 
         <div class="failure-topic">
             <h1 class="failure-headline">My Failures of<br>Previous year</h1>
@@ -41,12 +41,12 @@
 
 
 
-            <ul>
-                <li class="list"><p><img src="images/" alt="">Contrary to popular belief, is not simply.</p></li>
-                <li class="list"><p><img src="" alt="">Contrary to popular belief, is not simply.</p></li>
-                <li class="list"><p><img src="" alt="">Contrary to popular belief, is not simply.</p></li>
-                <li class="list"><p><img src="" alt="">Contrary to popular belief, is not simply.</p></li>
-                <li class="list"><p><img src="" alt="">Contrary to popular belief, is not simply.</p></li>
+            <ul >
+                <li class="list"><img src="images/icons/ok.png" alt="" height="24px" width="24px"><p> Contrary to popular belief, is not simply.</p></li>
+                <li class="list"><img src="images/icons/ok.png" alt="" height="24px" width="24px"><p>Contrary to popular belief, is not simply.</p></li>
+                <li class="list"><img src="images/icons/ok.png" alt="" height="24px" width="24px"><p>Contrary to popular belief, is not simply.</p></li>
+                <li class="list"><img src="images/icons/ok.png" alt="" height="24px" width="24px"><p>Contrary to popular belief, is not simply.</p></li>
+                <li class="list"><img src="images/icons/ok.png" alt="" height="24px" width="24px"><p>Contrary to popular belief, is not simply.</p></li>
             </ul>
 
         </div>
@@ -100,8 +100,40 @@
 
 <!--Footer-->
 <section class="foot">
-<p></p>
-<p></p>
+<div class="Future">
+  <h1 class="white">Future</h1>
+  <p class="footlines">There are many variations of passages of Lorem Ipsum available,<br> but the majority have suffered alteration in some<br> form, by injected humour, or randomised words</p>
+  <br>
+  <p class="footlines">Email : info@gmail.com</p>
+  <br>
+  <p class="footlines">Phone: 01999 99 99 99</p>
+  <br>
+
+  <ul class="foot-ul">
+    <li><img src="images/icons/fb.png" alt="" class="icon"></li>
+    <li><img src="images/icons/twitter.png" alt="" class="icon"></li>
+    <li><img src="images/icons/youtube.png" alt="" class="icon"></li>
+  </ul>
+
+</div>
+
+
+
+
+
+
+
+
+
+<div class="Subscribe">
+  <h1 class="white">Subscribe</h1>
+  <br>
+  <input class=" emailbox" type="email" name="" id="" placeholder="Enter your email">
+  <br>
+  <br>
+  <button class="btn3">Subscribe</button>
+
+</div>
 
 
 
