--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
               <!--Head section-->
     
             <header>
+              <div></div>
             
                 <div class="bonus">
                     <h1 class="quote">All Thinks Are<br>Possible If You <br>Believe</h1>
@@ -37,7 +38,7 @@
 
         <div class="failure-topic">
             <h1 class="failure-headline">My Failures of<br>Previous year</h1>
-            <p class="failure-subline">Contrary to popular belief, Lorem Ipsum is <br>not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+            <p class="failure-subline">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
 
 
 
