Hover & Dropdown added

--- a/index.html
+++ b/index.html
@@ -91,12 +91,44 @@
 
     </section>
 
+
+<!--Extra: Practising Dropdown cause I'm weak in this part-->
+
+<section>
+  <div class="New">
+    <button class="btn1">5 daily Task for 2023 </button>
+    <div class="dropdown">
+      <li class="wish">Early to Bed</li>
+      <li  class="wish">Early to Rise</li>
+      <li  class="wish">Daily Workout</li>
+      <li  class="wish">4 liter Water</li>
+      <li  class="wish">Avoid Social Media</li>
+    </div>
+
+  </div>
+</section>
+
+
+
+
+
    <div class="box">
     <h1 class="white-title">Always keep a positive<br>mindset</h1>
     <button class="btn2">Call Now</button>
    </div>
 
 </main>
+
+
+
+
+
+
+
+
+
+
+
 
 
 <!--Footer-->
